fixed extra space in copyright sec

--- a/css/default.css
+++ b/css/default.css
@@ -77,4 +77,6 @@ a {
         border-radius: 25px;
 
     }
+#copyright{
+padding: 0};
 }
